# MXWrite

./: CMakeLists.txt  MXWriteConfig.cmake.in  README.md  mxwrite.cpp  mxwrite.hpp
opencv_example/: CMakeLists.txt  opencv_ex.cpp
